Remove unwanted pages from site

--- a/content/Blog/intohuman yazılar/2.md
+++ b/content/Blog/intohuman yazılar/2.md
@@ -4,6 +4,10 @@ original_url: 'https://intohuman.com/category/tum-yazilar/page/2/'
 wayback_url: >-
   https://intohuman.com/category/tum-yazilar/page/2/
 pubDate: '2020-01-01'
+build:
+  render: never
+  list: never
+  publishResources: false
 ---
 
 
