--- a/content/Blog/intohuman yazılar/3.md
+++ b/content/Blog/intohuman yazılar/3.md
@@ -7,6 +7,10 @@ pubDate: '2020-01-01'
 draft: false
 originalUrl: 'https://intohuman.com/author/admin/page/3/'
 tags: []
+build:
+  render: never
+  list: never
+  publishResources: false
 ---
 ## [Girişim Testi.](https://intohuman.com/girisim-testi/)
 
